<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start" >

    <android.support.v4.widget.SlidingPaneLayout
        android:id="@+id/slidingpanellayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/leftfragment"
            android:name="leftfragment"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="left" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/packet"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:gravity="top"
                    android:text="@string/packs" />
                
              <Button
                    android:id="@+id/set"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:gravity="top"
                    android:text="@string/set" />
              
              <Button
                    android:id="@+id/aboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:gravity="top"
                    android:text="@string/aboutUs" />
              
              <Button
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:gravity="top"
                    android:text="@string/exit" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/contentfragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/main"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    android:gravity="center"
                    android:text="这是地图的界面"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.SlidingPaneLayout>

</RelativeLayout>